# mcp-vacuum

./: .branch-metadata.json  .branch-metadata.yaml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.prod  README.md  docker-compose.yml  pyproject.toml  simple_test.py  validator_tests.py
.devcontainer/: Dockerfile  devcontainer.json  verify-setup.sh
.github/workflows/: ci.yml  setup-uv.yml  update_branches.yml
.local/: branch-metadata.json  doc-index.json  extract_function_metadata.py  function-metadata.json  task-tracker.md
.metadata/branches/: code-review-fixes.md
docs/: MCP_Vacuum_Project_Specification.md  agent_workflows.md  conversion_agent_config.md  index.md  kagent_mcp_mapping.md  server_validation.md  troubleshooting_google_adk.md
src/mcp_vacuum/: __init__.py  __main__.py  agent.py  config.py  function_metadata.py  server.py
src/mcp_vacuum/adk/: __init__.py  auth_agent.py  auth_handler.py  base.py  conversion_agent.py  conversion_handler.py  discovery_agent.py  discovery_handler.py  mcp_client_agent.py  orchestration_agent.py
src/mcp_vacuum/auth/: __init__.py  dynamic_registration.py  oauth_client.py  pkce.py  token_manager.py  token_storage.py
src/mcp_vacuum/discovery/: __init__.py  discovery_service.py  network.py
src/mcp_vacuum/mcp_client/: __init__.py  base_client.py  exceptions.py  http_client.py
src/mcp_vacuum/models/: __init__.py  auth.py  common.py  kagent.py  mcp.py
src/mcp_vacuum/schema_gen/: __init__.py  schema_converter_service.py
src/mcp_vacuum/utils/: __init__.py  resilience.py
tests/: test_config.py  test_discovery_service.py  test_discovery_timeout.py  test_environment.py  test_http_client_timeout.py  test_http_mcp_client.py  test_models.py  test_oauth_client.py  test_pkce.py  test_pkce_challenge.py  test_platform_compatibility.py  test_schema_converter_service.py  test_server.py  test_token_manager.py  test_token_storage.py  test_validator_updates.py
tests/adk/: test_conversion_agent.py  test_discovery_agent.py
tests/discovery/: test_network.py
