[project]
name = "mcp-vacuum"
version = "0.3.0"
description = "AI agent for discovering and integrating MCP Servers with Kagent"
authors = [
    {name = "Tyler Zervas", email = "tz-dev@vectorweight.com"},
]
dependencies = [
    "google-adk>=1.5.0",  # Google Python Agent Developer Kit
    "cryptography>=45.0.5",  # For secure credential storage
    "pydantic[email]>=2.5.0",  # For schema validation and serialization (with email validation)
    "aiohttp>=3.9.0",  # For async HTTP communications
    "netifaces>=0.11.0",  # For network interface discovery
    "keyring>=25.0.0", # For storing secrets
    "structlog>=25.4.0",  # For structured logging
    "python-jose[cryptography]>=3.5.0",  # For JWT handling
    "click>=8.1.0",  # For CLI interface
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "zeroconf>=0.147.0", # For mDNS discovery, ensuring Py3.12+ support
    "mcp>=1.10.1",
]
requires-python = ">=3.12" # Project requires Python 3.12 or newer

readme = "README.md"
license = {file = "LICENSE"}

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "black>=25.1.0",
    "ruff>=0.12.2",
    "mypy>=1.16.1",
    "bandit>=1.8.6",
    "types-click>=7.1.8",
    "types-cryptography>=3.3.23.2",
    "types-aiohttp>=3.12.13",
    "types-zeroconf>=0.147.0",
    "types-structlog>=25.4.0"
]

[project.urls]
Homepage = "https://github.com/tzervas/mcp-vacuum"
Repository = "https://github.com/tzervas/mcp-vacuum.git"

[project.scripts]
mcp-vacuum = "mcp_vacuum.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/mcp_vacuum"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "B", "I", "S", "W", "N", "UP", "PL", "PTH", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q" # Removed --cov options for now
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["mcp_vacuum"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.2.1"
